--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Water Puzzle</string>
-    <string name="user">kldsafhaf asdfs dfase sdaf dfsda fsda fsed fsef sef sef af  fa fa as  fse fe f we ewrejkfjakr sdafsd afsae fwe few fe rfew fsdajkfne efnewn f</string>
+    <string name="user"> >>Total number of jugs should be equal to 3     >>Value of water in both jugs should be less than 10</string>
 </resources>
